fixed jump to login form

--- a/tailwind_app/static_src/src/styles.css
+++ b/tailwind_app/static_src/src/styles.css
@@ -547,7 +547,7 @@ grid-template-rows: repeat auto minmax(5rem, auto) 1fr;
 
 
 .col-1 {
-@apply flex items-center flex-col w-full sm:w-[45%] justify-center sm:h-[90%] relative left-0 bg-blue-700/30;
+@apply flex items-center flex-col w-full sm:w-[45%] justify-center h-0 sm:min-h-[70vh] lg:min-h-[90vh] relative left-0 top-0 bg-blue-700/30;
 /* background-color: rgba(255, 255, 255, 0.3); */
 backdrop-filter: blur(30px);
 border-radius: 0 10% 8% 0;
@@ -558,13 +558,16 @@ overflow: hidden; /* Hide any overflow content */
 }
 
 .col-2 {
-  @apply flex items-center mt-0 mb-[50%] sm:mt-[10%] sm:mb-[10%] flex-col w-full sm:w-[45%] min-h-[100vh] ;
+  @apply flex items-center mt-0 sm:mt-[10%] flex-col w-full sm:w-[45%] min-h-[100vh] ;
   position: relative;
   padding: 20px;
   overflow: hidden; /* Hide any overflow content */
 }
 
 .login-form form {
+  @apply w-full h-[100vh];
+}
+.register-form form {
   @apply w-full h-[100vh];
 }
 
@@ -746,7 +749,29 @@ overflow: hidden; /* Hide any overflow content */
 }
 
 .error-message {
+  @apply text-red-500;
   color: red;
   font-size: 0.9em;
   margin-top: 5px;
+}
+
+.login-form,
+.register-form {
+  @apply flex flex-col items-center w-full absolute transition-all duration-500 ease-in-out;
+  padding: 0 4vw;
+}
+
+.login-form.active {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.register-form.active {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.login-form:not(.active),
+.register-form:not(.active) {
+  left: 150%;
 }
